--- a/src/views/monitor/dash_monitor.handlebars
+++ b/src/views/monitor/dash_monitor.handlebars
@@ -41,10 +41,10 @@
 					  </thead>
 					  <tbody>
 					    <tr>
-					      <td>Mark</td>
-					      <td>Otto</td>
-					      <td>@mdo</td>
-					      <td>@mdo</td>
+					      <td>{{t_vendas}}</td>
+					      <td>{{m_vendas}}</td>
+					      <td>{{s_vendas}}</td>
+					      <td>{{d_vendas}}</td>
 					    </tr>
 					  </tbody>
 					</table>
@@ -60,8 +60,8 @@
 					  </thead>
 					  <tbody>
 					    <tr>
-					      <td scope="row">R$ {{base_price}}</td>
-					      <td>R$ 0,00</td>
+					      <td scope="row">R$ {{ant_price}}</td>
+					      <td>R$ {{atu_price}}</td>
 					      <td>R$ 0,00</td>
 					    </tr>
 					  </tbody>
@@ -70,8 +70,7 @@
 		  		<div class="col-2 d-flex justify-content-end align-items-center">
 		  			<span class="mx-1"> >> </span>
 		  			<a href="#" class="mx-1">Ver produto</a>
-		  		</div>
-		  
+		  		</div>	  
 		  	</div>
 		    
 		  </div>
@@ -81,3 +80,9 @@
 	</div>
 </div>
 
+<div class="row my-2">
+	<div class="col-12">
+		<a href="/monitor/update-itens"><button class="btn btn-success">Atualizar</button></a>
+		<a href="/monitor/cadastro"><button class="btn btn-primary">Novo</button></a>
+	</div>
+</div>
