adicionando btn de deletar

--- a/src/views/monitor/dash_monitor.handlebars
+++ b/src/views/monitor/dash_monitor.handlebars
@@ -76,11 +76,11 @@
 					</table>
 		  		</div>
 		  		<div class="col-2 d-flex justify-content-end align-items-center">
-		  			<span class="mx-1"> >> </span>
+		  			<span class="mx-1"> {{status}} </span>
 		  			<a href="#" class="mx-1">Ver produto</a>
-		  		</div>	  
-		  	</div>
-		    
+		  			<a href="/monitor/delete/{{_id}}"><button class="btn btn-outline-danger mx-1">X</button></a>
+		  		</div>
+		  	</div>		    
 		  </div>
 		</div>
 		{{else}}
