--- a/src/views/monitor/dash_monitor.handlebars
+++ b/src/views/monitor/dash_monitor.handlebars
@@ -35,7 +35,7 @@
 		  		</div>
 		  		<div class="col-2 d-flex align-items-center">
 		  			<a href="{{permalink}}" target="blank"><strong>{{title}}</strong></a>
-					
+					<i class="bi bi-box-arrow-in-up-right"></i>
 		  		</div>
 		  		<div class="col-4">
 		  			<table class="table mx-1">
@@ -78,7 +78,7 @@
 		  		<div class="col-2 d-flex justify-content-end align-items-center">
 		  			<span class="mx-1"> {{status}} </span>
 		  			<a href="#" class="mx-1">Ver produto</a>
-		  			<a href="/monitor/delete/{{_id}}"><button class="btn btn-outline-danger mx-1">X</button></a>
+		  			<a href="/monitor/delete/{{_id}}"><button class="btn  mx-2"><i class="bi bi-x-lg"></i></button></a>
 		  		</div>
 		  	</div>		    
 		  </div>
