--- a/src/views/precific/home.handlebars
+++ b/src/views/precific/home.handlebars
@@ -1,107 +1,298 @@
+{{!-- CSS --}}
+
+<style type="text/css">
+	
+	.clateg_list{
+		z-index: 100;
+		position: absolute;
+		background: #fff;
+	}
+
+	.clateg_list #itens{
+		width: 350px;
+		max-height: 500px;
+		overflow-y: auto;
+	}
+
+</style>
+
+
 <h1>PRECIFIC</h1>
 
-<form class="form-control mb-4" action="#">
-  <label for="classic">Clássico: </label>
-  <input type="text" id="classic" class="form-control">
-  <label for="premium">Premium: </label>
-  <input type="text" id="premium" class="form-control">
+
+
+
+<form class="form-control mb-4 bg-light" action="#">
+	
+{{!-- CUSTOS --}}
+	<div class="row">
+		<div class="col col-4 px-3">
+			<h3>Custos</h3>
+			<div class="border border-1 px-2 py-2 mb-4 bg-white shadow">
+				<div class="mb-1 row">
+			    <label for="prod_value" class="col-form-label">Preço bruto do produto</label>
+			    <div class="input-group">
+			    	<span class="input-group-text" id="basic-addon1">R$</span>
+			      <input type="text" class="form-control" id="prod_value">
+			    </div>
+			  </div>
+			  <div class="mb-1 row">
+			    <label for="emba_value" class="col-form-label">Embalagem</label>
+			    <div class="input-group">
+			    	<span class="input-group-text" id="basic-addon1">R$</span>
+			      <input type="text" class="form-control" id="emba_value">
+			    </div>
+			  </div>
+			  <div class="mb-1 row">
+			    <label for="deslo_value" class="col-form-label">Gastos com deslocamento</label>
+			    <div class="input-group">
+			    	<span class="input-group-text" id="basic-addon1">R$</span>
+			      <input type="text" class="form-control" id="deslo_value">
+			    </div>
+			  </div>
+			  <div class="mb-1 row">
+			    <label for="outros_value" class="col-form-label">Outros</label>
+			    <div class="input-group">
+			    	<span class="input-group-text" id="basic-addon1">R$</span>
+			      <input type="text" class="form-control" id="outros_value">
+			    </div>
+			  </div>
+			</div>
+		  <div class="border border-1 px-2 py-2 mb-4 bg-white shadow">
+			  <div class="mb-1 row">
+			    <div class="col-6">
+			    	<label for="lucro_pretend" class="col-form-label">Lúcro desejado</label>
+				    <div class="input-group">
+				      <input type="text" class="form-control" id="lucro_pretend">
+				    	<span class="input-group-text" id="basic-addon1">%</span>
+				    </div>
+			    </div>
+			    <div class="col-6">
+			    	<label for="qtd_prod" class="col-form-label">Qtd. de produto</label>
+				    <div class="input-group">
+				      <input type="text" class="form-control" id="qtd_prod">
+				    </div>
+			    </div>
+			  </div>
+			  <hr>
+		   	<div class="mt-3 row">
+			    <label for="custo_invest_total" class="col-form-label">Investimento total</label>
+			    <div class="input-group">
+			    	<span class="input-group-text" id="basic-addon1">R$</span>
+			      <input type="text" readonly class="form-control" id="custo_invest_total">
+			    </div>
+			  </div>
+			</div>
+		</div>
+
+{{!-- CONFIGURAÇÃO --}}
+
+		<div class="col col-4 px-3">
+			<h3>Config.</h3>
+
+			<div class="border border-1 px-2 py-2 mb-4 bg-white shadow">
+				<div class="mb-1 row">
+			    <label for="classic" class="col-form-label">Clássico</label>
+			    <div class="input-group">
+			      <input type="text" class="form-control" id="classic">
+			    	<span class="input-group-text" id="basic-addon1">%</span>
+			    </div>
+			  </div>
+			  <div class="mb-1 row">
+			    <label for="premium" class="col-form-label">Premium</label>
+			    <div class="input-group">
+			      <input type="text" class="form-control" id="premium">
+			    	<span class="input-group-text" id="basic-addon1">%</span>
+			    </div>
+			  </div>
+
+			  <div class="mb-1 mt-3 row">      
+		      <div class="input-group">
+		      	<div id="categ"></div>
+			    </div>
+			  </div>
+
+		    <input type="text" class="form-control" id="categ_list" hidden placeholder="Categorias">
+
+			  <div class="row mb-1">
+			  	<div class="col">
+			  		<span id="btn_send" class="btn btn-secondary mt-3">Categorias <i class="bi bi-plus"></i></span>
+
+						<div id="clateg_list" class="clateg_list card mt-2" style="display: none">
+							<span class="btn btn-outline mt-2" id="btn_close_class_list"><i class="bi bi-x-lg"></i></span>
+							<div id="itens" class="card-body">
+								{{!-- conteudo dinâmico --}}
+							</div>
+						</div>
+			  	</div>
+			  </div>
+
+			  <div class="mb-1 row">
+			    <label for="taxa_fixa" class="col-form-label">Taxa fixa</label>
+			    <div class="input-group">
+			      <input type="text" class="form-control" id="taxa_fixa">
+			    	<span class="input-group-text" id="basic-addon1">%</span>
+			    </div>
+			  </div>
+
+			  <div class="mb-1 row">
+			    <label for="frete_fixo" class="col-form-label">Frete padrão</label>
+			    <div class="input-group">
+			    	<span class="input-group-text" id="basic-addon1">R$</span>
+			      <input type="text" class="form-control" id="frete_fixo">
+			    </div>
+			  </div>
+
+			  <div class="mb-1 row">
+			    <label for="min_valor" class="col-form-label">Preço mínimo</label>
+			    <div class="input-group">
+			    	<span class="input-group-text" id="basic-addon1">R$</span>
+			      <input type="text" class="form-control" id="min_valor">
+			    </div>
+			  </div>
+
+			  <div class="mb-1 row">
+			    <label for="valor_base_frete" class="col-form-label">Base frete grátis</label>
+			    <div class="input-group">
+			    	<span class="input-group-text" id="basic-addon1">R$</span>
+			      <input type="text" class="form-control" id="valor_base_frete">
+			    </div>
+			  </div>
+			</div>
+
+		</div>
+
+
+{{!-- RESPOSTA --}}
+
+		<div class="col col-4 px-3">
+			<h3>Resposta</h3>
+			<div class="border border-1 px-2 py-2 mb-4 bg-white shadow">
+				<div class="row mb-1">
+					<h4 class="col-form-label">Clássico</h4>
+					<div class="col col-6">
+					 	<label for="resp_class_valor" class="col-form-label">Valor:</label>
+				    <div class="input-group">
+				    	<span class="input-group-text" id="basic-addon1">R$</span>
+				      <input type="text" readonly class="form-control" id="resp_class_valor">
+				    </div>
+					</div>
+
+					<div class="col col-6">
+					 	<label for="resp_class_lucro" class="col-form-label">Lucro:</label>
+				    <div class="input-group">
+				    	<span class="input-group-text" id="basic-addon1">R$</span>
+				      <input type="text" readonly class="form-control" id="resp_class_lucro">
+				    </div>
+					</div>
+				</div>
+				<hr>
+				<div class="row mb-1">
+					 <h4 class="col-form-label">Premium</h4>
+					 <div class="col col-6">
+					 	<label for="resp_prem_valor" class="col-form-label">Valor:</label>
+				    <div class="input-group">
+				    	<span class="input-group-text" id="basic-addon1">R$</span>
+				      <input type="text" readonly class="form-control" id="resp_prem_valor">
+				    </div>
+					 </div>
+
+					 <div class="col col-6">
+					 	<label for="resp_prem_lucro" class="col-form-label">Lucro:</label>
+				    <div class="input-group">
+				    	<span class="input-group-text" id="basic-addon1">R$</span>
+				      <input type="text" readonly class="form-control" id="resp_prem_lucro">
+				    </div>
+					 </div>
+				</div>
+			</div>
+			
+			
+
+			{{!-- frete gratis --}}
+			<div class="border border-1 px-2 py-2 mb-4 bg-white shadow">
+				<div class="row mb-1">
+					 <h4 class="col-form-label">Clássico <i>*FRETE GRÁTIS</i></h4>
+					 <div class="col col-6">
+					 	<label for="resp_class_valor_frete" class="col-form-label">Valor:</label>
+				    <div class="input-group">
+				    	<span class="input-group-text" id="basic-addon1">R$</span>
+				      <input type="text" readonly class="form-control" id="resp_class_valor_frete">
+				    </div>
+					 </div>
+
+					 <div class="col col-6">
+					 	<label for="resp_class_lucro_frete" class="col-form-label">Lucro:</label>
+				    <div class="input-group">
+				    	<span class="input-group-text" id="basic-addon1">R$</span>
+				      <input type="text" readonly class="form-control" id="resp_class_lucro_frete">
+				    </div>
+					 </div>
+				</div>
+				<hr>
+				<div class="row mb-1">
+					 <h4 class="col-form-label">Premium <i>*FRETE GRÁTIS</i></h4>
+					 <div class="col col-6">
+					 	<label for="resp_prem_valor_frete" class="col-form-label">Valor:</label>
+				    <div class="input-group">
+				    	<span class="input-group-text" id="basic-addon1">R$</span>
+				      <input type="text" readonly class="form-control" id="resp_prem_valor_frete">
+				    </div>
+					 </div>
+
+					 <div class="col col-6">
+					 	<label for="resp_prem_lucro_frete" class="col-form-label">Lucro:</label>
+				    <div class="input-group">
+				    	<span class="input-group-text" id="basic-addon1">R$</span>
+				      <input type="text" readonly class="form-control" id="resp_prem_lucro_frete">
+				    </div>
+					 </div>
+				</div>
+			</div>
+
+
+
+
+			{{!-- total --}}
+			<div class="border border-1 px-2 py-2 mb-4 bg-white shadow">
+				<div class="row mb-1">
+					<div class="col col-6">
+						<label for="resp_cash" class="col-form-label">CASH:</label>
+				    <div class="input-group">
+				    	<span class="input-group-text" id="basic-addon1">R$</span>
+				      <input type="text" readonly class="form-control" id="resp_cash">
+				    </div>
+					</div>
+					<div class="col col-6">
+						<label for="resp_lucro_total" class="col-form-label">Lucro total:</label>
+				    <div class="input-group">
+				    	<span class="input-group-text" id="basic-addon1">R$</span>
+				      <input type="text" readonly class="form-control" id="resp_lucro_total">
+				    </div>
+					</div>
+				</div>
+			</div>
+
+			<div class="row mb-1">
+			 	
+			</div>
+
+		</div>
+
+	
+		<div class="row">
+			<div class="col">
+				<span class="btn btn-success">Calcular</span>
+				<span class="btn btn-danger">Limpar</span>
+				<input type="submit" name="" value="Salvar" class="btn btn-primary">
+			</div>
+		</div>
+		
+	</div>
 </form>
-<div id="categ"></div>
-<button id="btn_send" class="btn btn-success">Send</button>
-<div>
-	<ul id="itens">
-		{{!-- conteudo dinâmico --}}
-	</ul>
-</div>
 
 
-<script type="text/javascript">
-	const btn = document.querySelector("#btn_send");
-	const itens = document.querySelector("#itens");
-	const categ = document.querySelector("#categ");
-	const taxa_class = document.querySelector("#classic");
-	const taxa_premi = document.querySelector("#premium");
-	let arr_categorias = []
 
-	// CATEGORIAS BASE
-		btn.addEventListener('click', function(eve){ // CLICANDO NO BTN DE CATEGORIAS
-			const URI = "https://api.mercadolibre.com/sites/MLB/categories";
 
-			// ZERAR A LISTA ANTERIOR, CATEGORIAS SELECIONADAS E TAXAS
-			itens.innerHTML = ""
-			arr_categorias = []
-			taxa_premi.value = "";
-			taxa_class.value = "";
-
-			categ.innerHTML = arr_categorias; // PASSA O ARRAY VAZIO PARA A TELA
-
-			fetch(URI)
-				.then((response) => { // FAZ A CONSULTA NA API DO ML PARA OBTER AS CATEGORIAS BASE
-					return response.json()
-				})
-				.then((response) => {			
-					response.forEach((data) => {
-						let item = document.createElement("li");
-						item.classList.add("lista_item")
-
-						item.innerHTML = `<a class="sub_categoria" href="https://api.mercadolibre.com/categories/${data.id}">${data.name}</a>`
-
-						itens.appendChild(item)
-					})
-					
-				});
-
-		},false);
-
-	// ITENS DA LISTA DE CATEGORIAS
-		itens.addEventListener('click', function(event){ // CLICANDO EM ALGUMA CATEGORIA BASE
-			event.preventDefault()
-			var cat = event.target
-			if(cat.classList.contains("sub_categoria")){
-				arr_categorias.push(cat.innerText)
-
-				// CONSULTA CATEGORIAS FILHAS
-				const URI = cat.getAttribute("href")
-				fetch(URI)
-					.then((response) => {
-						return response.json()
-					})
-					.then((response) => {
-						// ZERAR A LISTA ANTERIOR
-						itens.innerHTML = ""
-
-						if(response.children_categories.length == 0){ // ULTIMA CATEGORIA
-							// CONSULTA NA API DE TAXA
-							const URI = `/api/fee/${response.id}`;
-							fetch(URI)
-								.then((response) => {
-									return response.json()
-								})
-								.then((response) => {
-									response.forEach((data) => {
-										if(data.listing_type_name == "Premium"){
-											taxa_premi.value = data.sale_fee_amount;
-										}else{
-											taxa_class.value = data.sale_fee_amount;
-										}
-									})
-									console.log(response)
-								})
-						}
-
-						response.children_categories.forEach((data) => {
-							let item = document.createElement("li");
-							item.classList.add("lista_item")
-							item.innerHTML = `<a class="sub_categoria" href="https://api.mercadolibre.com/categories/${data.id}">${data.name}</a>`
-							itens.appendChild(item)
-						})
-						
-					});
-
-			}
-
-			categ.innerHTML = arr_categorias;
-			console.log(cat.innerText)
-		}, false);
-
-</script>
+{{!-- LISTA DE CATEGORIAS --}}
+<script src="./js/precif_list_categ.js"></script>
