ajuste para produção

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,6 +1,33 @@
 {{!-- HOME --}}
 
-<div>
-	<a href="/precific"><button>PRECIFICAÇÃO</button></a>
-	<a href="/monitor"><button>MONITORAMENTO</button></a>
+<div class="text-center" style="margin-top: 60px;">
+	<span class="fs-2 badge bg-secondary mb-2"><strong></strong>ML-Sistem</strong></span>
+	<h1 class="mb-4 fs-3 fw-normal">Calculadora de preços e monitoramento de anúncios do MercadoLivre</h1>
 </div>
+
+<div class="row" style="margin-top: 80px;">
+	<div class="col col-12 col-md-6">
+		<div class="card mx-auto my-4" style="max-width: 500px;">
+			<div class="card-body text-center">
+				<p class="text-primary" style="font-size: 6em;"><i class="bi bi-calculator"></i></p>				
+				<h2 class="mb-4 fs-1">Precificação</h2>
+				<h3 class="fs-4 fw-normal">Quer saber qual o preço certo para anunciar o seu produto?</h3>
+				<p>Com a nossa <strong>calculadora de preços para o MercadoLivre</strong> você consegue definir o preço ideal para o seu produto levando em conta os custos e a porcentagem de lúcro desejada.</p>
+				<a href="/precific" class="btn btn-primary stretched-link my-4">Calcule agora mesmo!</a>
+			</div>
+		</div>
+	</div>
+	<div class="col col-12 col-md-6">
+		<div class="card mx-auto my-4" style="max-width: 500px;">
+			<div class="card-body text-center">
+				<p class="text-primary" style="font-size: 6em;"><i class="bi bi-search"></i></p>				
+				<h2 class="mb-4 fs-1">Monitoramento</h2>
+				<h3 class="fs-4 fw-normal">Deseja dar uma avaliada nos anúncios da concorrencia?</h3>
+				<p>Saiba quantas vendas o anúncio está tendo por dia, semana e mês. Monitore as mudanças de preço que seu concorrente faz. <strong>Descubra se vale a pena vender aquele produto.</strong></p>
+				<a href="/monitor" class="btn btn-primary stretched-link my-4">Monitorar agora!</a>
+			</div>
+		</div>
+	</div>
+</div>
+
+<link rel="stylesheet" href="./css/home.css">
