--- a/src/views/precific/home.handlebars
+++ b/src/views/precific/home.handlebars
@@ -23,7 +23,7 @@
 						{{!-- <label for="custo_prod_value" class="col-form-label">Valor do produto</label> --}}
 						<div class="input-group">
 							<span class="input-group-text" id="basic-addon1">R$</span>
-							<input type="text" class="form-control custo_soma" id="custo_prod_value" placeholder="Valor" value="123">
+							<input type="text" class="form-control custo_soma" id="custo_prod_value" placeholder="Valor">
 						</div>
 					</div>
 					<div class="col col-2">
