--- a/src/public/css/precific.css
+++ b/src/public/css/precific.css
@@ -21,3 +21,13 @@
     height: 30px;
     border-bottom: solid 1px rgba(0,0,0,0.3);
 }
+
+/* Card */
+.card:hover{
+    transition-duration: .3s;
+    box-shadow: 0px 6px 15px 0px rgba(0,0,0,0.1);
+}
+.card:enabled{
+    transition-duration: .3s;
+    box-shadow: 0px 6px 15px 0px rgba(0,0,0,0.1);
+}
