ajsutes no layout e adicionando no google search

--- a/src/views/monitor/dash_monitor.handlebars
+++ b/src/views/monitor/dash_monitor.handlebars
@@ -17,9 +17,9 @@
 	<div class="col-12 d-flex justify-content-center">
 		<form action="/monitor/save" method="POST">
 			
-			<div class="d-flex">
+			<div class="input-group">
 				<input type="text" name="id_item" id="id_item" class="form-control" style="width: 300px;" placeholder="ID do produto Ex.: #1897733255">
-				<button type="submit" class="btn btn-primary mx-1">Adicionar +</button>
+				<button type="submit" class="btn btn-primary">Adicionar +</button>
 			</div>			
 		</form> 
 
