--- a/src/views/monitor/dash_monitor.handlebars
+++ b/src/views/monitor/dash_monitor.handlebars
@@ -1,5 +1,8 @@
 {{!-- MONITOR --}}
 
+{{!-- seo --}}
+<script src="/js/seo/monitor_metadata.js"></script>
+
 <div class="row">
 	<div class="col-12">
 		<h1 class="text-center text-muted my-4">Monitoramento de anúncios do MercadoLivre</h1>
