--- a/src/views/precific/home.handlebars
+++ b/src/views/precific/home.handlebars
@@ -1,6 +1,9 @@
 {{!-- CSS --}}
 <link rel="stylesheet" href="css/precific.css">
 
+{{!-- seo --}}
+<script src="/js/seo/precific_metadata.js"></script>
+
 <h1 class="my-4 text-muted text-center">Precificação de produtos para MercadoLivre</h1>
 <p class="text-center text-muted my-4">
 	Descubra qual o preço certo para anunciar produtos no MercadoLivre<br>
