--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -2,7 +2,7 @@
 
 <div class="text-center" style="margin-top: 60px;">
 	<span class="fs-2 badge bg-secondary mb-2"><strong></strong>ML-Sistem</strong></span>
-	<h1 class="mb-4 fs-3 fw-normal">Calculadora de preços e monitoramento de anúncios do MercadoLivre</h1>
+	<h1 class="mb-4 fs-3 fw-normal">Calculadora de preços e monitoramento de anúncios para MercadoLivre</h1>
 </div>
 
 <div class="row" style="margin-top: 80px;">
@@ -13,7 +13,7 @@
 				<h2 class="mb-4 fs-1">Precificação</h2>
 				<h3 class="fs-4 fw-normal">Quer saber qual o preço certo para anunciar o seu produto?</h3>
 				<p>Com a nossa <strong>calculadora de preços para o MercadoLivre</strong> você consegue definir o preço ideal para o seu produto levando em conta os custos e a porcentagem de lúcro desejada.</p>
-				<a href="/precific" class="btn btn-primary stretched-link my-4">Calcule agora mesmo!</a>
+				<a href="/precific" class="btn btn-primary stretched-link my-4">Calcular agora!</a>
 			</div>
 		</div>
 	</div>
