--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -4,10 +4,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ML Sistem</title>
+	<title>ML Sistem | Calcualdora de preços e monitoramento de produtos para Mercado Livre</title>
+	<link rel="sitemap" type="application/xml" title="sitemap" href="https://ml-sistem.herokuapp.com/sitemap.xml">
 	<!-- BOOTSTRAP CSS only -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+	<script src="/js/seo/canonical.js"></script>
 </head>
 <body class="bg-light">
 	{{>menu}}
